# apriltag

./: README.md
apriltag_calibration/: CMakeLists.txt  package.xml
apriltag_calibration/include/apriltag_calibration/: calibrator.h
apriltag_calibration/include/apriltag_calibration/AprilTags/: Edge.h  TagDetector.h  TagFamily.h
apriltag_calibration/src/: calibration.cpp  calibrator.cpp
apriltag_config/: CMakeLists.txt  package.xml  params.yml
apriltag_core/: CMakeLists.txt  README.md  package.xml
apriltag_core/config/: params.yml
apriltag_core/include/apriltag_core/: calibrator.h  detector.h  utils.h
apriltag_core/src/: calibrator.cpp  detector.cpp  utils.cpp
apriltag_core/src/nodes/: calibrate.cpp  estimate_pose.cpp
apriltag_detector/: .gitignore  CMakeLists.txt  README.md  package.xml
apriltag_detector/include/apriltag_detector/: apriltag_detector.hpp
apriltag_detector/launch/: make_pattern.launch
apriltag_detector/src/: apriltag_detector.cpp
apriltag_detector/src/nodes/: estimate_pose.cpp  make_pattern.cpp
apriltag_launch/: package.xml
apriltag_launch/launch/: display.launch  load_params.launch  make_pattern.launch  track.launch
apriltag_ros/: CMakeLists.txt  README.md  package.xml
apriltag_ros/cmake/: FindApriltag.cmake
apriltag_ros/config/: lwr.rviz  params.yml  rviz.rviz
apriltag_ros/include/apriltag_ros/: calibrator.h  detector.h  utils.h
apriltag_ros/launch/: calibrate.launch  display.launch  load_params.launch  make_pattern.launch  publish_calibration.launch  track.launch
apriltag_ros/src/: calibrator.cpp  detector.cpp  publish_calibration.cpp  track.cpp  utils.cpp
apriltag_ros/src/nodes/: calibrate.cpp  estimate_pose.cpp  make_pattern.cpp
cv_tools/: CMakeLists.txt  README.md  package.xml
cv_tools/include/cv_tools/geometry/: kdtree.hpp  normal_estimator.hpp  pinhole_camera.hpp  point_list.hpp  viewpoint_sampler.hpp  voxel_grid.hpp
cv_tools/include/cv_tools/util/: eigen_utils.hpp  rgbd_utils.hpp
cv_tools/include/cv_tools/viz/: off_screen_renderer.hpp  pcl_visulaizer.hpp
cv_tools/src/geometry/: kdtree.cpp  normal_estimator.cpp  point_list.cpp  viewpoint_sampler.cpp  voxel_grid.cpp
cv_tools/src/util/: eigen_utils.cpp  rgbd_utils.cpp
cv_tools/src/viz/: off_screen_renderer.cpp  pcl_visualizer.cpp
rosba_object_detection/: CMakeLists.txt  package.xml
rosba_object_detection/src/: detect.cpp  track.cpp
